src/metrics/snapshots/big_code_analysis__metrics__abc__tests__python_boolean_operators_count_conditions.snap
---
source: src/metrics/abc.rs
assertion_line: 3430
expression: metric.abc
---
{
  "assignments": 0.0,
  "branches": 0.0,
  "conditions": 2.0,
  "magnitude": 2.0,
  "assignments_average": 0.0,
  "branches_average": 0.0,
  "conditions_average": 1.0,
  "assignments_min": 0.0,
  "assignments_max": 0.0,
  "branches_min": 0.0,
  "branches_max": 0.0,
  "conditions_min": 0.0,
  "conditions_max": 2.0
}
