src/metrics/snapshots/big_code_analysis__metrics__abc__tests__python_comparisons_count_conditions.snap
---
source: src/metrics/abc.rs
assertion_line: 3399
expression: metric.abc
---
{
  "assignments": 3.0,
  "branches": 0.0,
  "conditions": 3.0,
  "magnitude": 4.242640687119285,
  "assignments_average": 1.5,
  "branches_average": 0.0,
  "conditions_average": 1.5,
  "assignments_min": 0.0,
  "assignments_max": 3.0,
  "branches_min": 0.0,
  "branches_max": 0.0,
  "conditions_min": 0.0,
  "conditions_max": 3.0
}
